Add css structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>html-css-review</title>
-        <link rel="stylesheet" href="estiloss.css">
+        <link rel="stylesheet" href="./src/styles/structure.css">
     </head>
     <body>
 
